[metadata]
name = ansible-role-quickstart-overcloud
summary = ansible-role-tripleo-overcloud - A ansible role for deploying a tripleo overcloud
description-file =
    README.md
author = RDO-CI Team
author-email = whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-quickstart-overcloud
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/quickstart-overcloud/defaults = defaults/*
    usr/local/share/ansible/roles/quickstart-overcloud/meta = meta/*
    usr/local/share/ansible/roles/quickstart-overcloud/tasks = tasks/*
    usr/local/share/ansible/roles/quickstart-overcloud/templates = templates/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
